styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@media (prefers-color-scheme: light) {
  body {
    background-color: #ffffff;
  }
}

@layer utilities {
  .overflow-hidden {
    -webkit-mask-image: -webkit-radial-gradient(white, black);
  }
}

@layer components {
  .btn {
    @apply inline-flex justify-center items-center gap-3 px-4 py-2.5 rounded-[28px]
      bg-primary text-white
      hover:bg-accent hover:shadow-xl hover:translate-y-0.5
      transition duration-300 ease-in-out
      text-center font-semibold uppercase text-sm tracking-[0.08em] no-underline;
  }
}

.ProseMirror .is-editor-empty:first-child::before {
  content: attr(data-placeholder);
  float: left;
  color: #adb5bd;
  pointer-events: none;
  height: 0;
}
.ProseMirror .is-empty::before {
  content: attr(data-placeholder);
  float: left;
  color: #adb5bd;
  pointer-events: none;
  height: 0;
}

/* Custom image styles */

.ProseMirror img {
  transition: filter 0.1s ease-in-out;

  &:hover {
    cursor: pointer;
    filter: brightness(90%);
  }

  &.ProseMirror-selectednode {
    outline: 3px solid #5abbf7;
    filter: brightness(90%);
  }
}

/* Custom TODO list checkboxes – shoutout to this awesome tutorial: https://moderncss.dev/pure-css-custom-checkbox-style/ */

ul[data-type="taskList"] li > label {
  margin-right: 0.2rem;
  user-select: none;
}

@media screen and (max-width: 768px) {
  ul[data-type="taskList"] li > label {
    margin-right: 0.5rem;
  }
}

ul[data-type="taskList"] li > label input[type="checkbox"] {
  -webkit-appearance: none;
  appearance: none;
  background-color: #fff;
  margin: 0;
  cursor: pointer;
  width: 1.2em;
  height: 1.2em;
  position: relative;
  top: 5px;
  border: 2px solid black;
  margin-right: 0.3rem;
  display: grid;
  place-content: center;

  &:hover {
    background-color: #f8f9fa;
  }

  &:active {
    background-color: #e9ecef;
  }

  &::before {
    content: "";
    width: 0.65em;
    height: 0.65em;
    transform: scale(0);
    transition: 120ms transform ease-in-out;
    box-shadow: inset 1em 1em;
    transform-origin: center;
    clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
  }

  &:checked::before {
    transform: scale(1);
  }
}

ul[data-type="taskList"] li[data-checked="true"] > div > p {
  color: #a8a29e;
  text-decoration: line-through;
  text-decoration-thickness: 2px;
}

.rdt input {
  border: none;
  padding: 0;
}

/* Fix placeholder overlap bug */

.ProseMirror .is-editor-empty:first-child::before {
  content: unset;
}

.ProseMirror li.is-empty::before,
.ProseMirror ul.is-empty::before {
  content: unset;
}

